code: fix inconsistencies
